--- a/index.html
+++ b/index.html
@@ -114,13 +114,11 @@
             </div>
 
             <div class="title-conteudo">
-                <h1>Desenvolvimento para Web</h1>
+                <h1>Desenvolvimento de Sites</h1>
             </div>
 
             <div class="txt-conteudo">
-                <p>Desenvolvimento de aplicativos integrados com plataformas online, que automatizam 
-                    processos específicos ou mesmo para revolucionar um segmento de mercado com algo 
-                    totalmente inédito.</p>
+                <p>Um site bem estruturado, criado seguindo uma estratégia de comunicação que mostre o que a empresa é e os problemas que ela resolve com comunicação clara é o que desenvolvemos para nossos clientes.</p>
             </div>
 
         </div>
@@ -131,13 +129,11 @@
             </div>
 
             <div class="title-conteudo">
-                <h1>Desenvolvimento de Aplicativos</h1>
+                <h1>Desenvolvimento de Startups</h1>
             </div>
 
             <div class="txt-conteudo">
-                <p>Desenvolvimento de aplicativos integrados com plataformas online, que automatizam 
-                    processos específicos ou mesmo para revolucionar um segmento de mercado com algo 
-                    totalmente inédito.</p>
+                <p>Nós respiramos Startups e temos orgulho de nos envolver com diversos projetos inovadores que estão ganhando escala, visibilidade e melhorando a vida das pessoas através de novos modelos de negócios</p>
             </div>
 
         </div>
@@ -152,9 +148,7 @@
             </div>
 
             <div class="txt-conteudo">
-                <p>Desenvolvimento de aplicativos integrados com plataformas online, que automatizam 
-                    processos específicos ou mesmo para revolucionar um segmento de mercado com algo 
-                    totalmente inédito.</p>
+                <p>Softwares sob medida para seu negócio, com objetivo de automatizar processos manuais, controlar informações que estão em planilhas, caderninhos de anotações ou mesmo apenas na sua cabeça.</p>
             </div>
 
         </div>
